routes for deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://obisaga.github.io/home",
+  "homepage": "https://obisaga.github.io/theJewelleryShop",
   "name": "ecommerceclient",
   "private": true,
   "version": "0.0.0",
